            line, and checked for consistency between two configure runs
            (provided that caching is used, see above);

	  * are kept during automatic reconfiguration as if having been
            passed as command line arguments, even if no cache is used.

	  See the variable output section of 'configure --help' for a
	  list of all these variables.


UTILITIES

    o	Sweave(), Stangle() and friends in package tools.  Sweave allows
	mixing LaTeX documentation and R code in a single source file:
	the R code can be replaced by its output (text, figures) to
	allow automatic report generation.  Sweave files found in
	package subdir 'inst/doc' are automatically tested by R CMD
	check.

    o	Rdconv can convert to the S4 '.sgml' format.

    o   R::Utils.pm masks some platform dependencies in perl code by
        providing global variables like R_OSTYPE or wrapper functions
        like R_runR().

    o   If a directory 'inst/doc' is present in the sources of a
        package, the HTML index of the installed package has a link to
        the respective subdirectory.

    o	R CMD check is more stringent: it now also fails on malformed
	'Depends' and 'Maintainer' fields in 'DESCRIPTION' files, and on
	unbalanced braces in Rd files.  It now also provides pointers to
	documentation for problems it reports.

    o	R CMD check, build and INSTALL produce outline-type output.

    o	QA functions in package 'tools' now return the results of their
	computations as objects with suitable print() methods.  By
	default, output	is only produced if a problem was found.


C-LEVEL FACILITIES

    o	All the double-precision BLAS routines are now available,
	and package writers are encouraged not to include their own
	(so enhanced ones will be used if requested at configuration).

    o	findInterval(xt[],n,x,...) gives the index (or interval number)
	of x in the sorted sequence xt[].  There's an
	F77_SUB(interv)(.) to be called from Fortran; this used to be